unpackaged/main/default/objects/Floor_Price__c/Floor_Price__c.object-meta.xml
<CustomObject>
    <label>Floor Price</label>
    <nameField>
        <label>Floor Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floor Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>