unpackaged/main/default/objects/Floor_Price__c/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <label>Min Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>