unpackaged/main/default/objects/Floor_Price__c/fields/Price2__c.field-meta.xml
<CustomField>
    <fullName>Price2__c</fullName>
    <label>Floor Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>