unpackaged/main/default/objects/Floor_Price__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Floor Price 1</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>